Change /request endpoint to /mining, remove nested request parameter
